--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -30,24 +30,32 @@ body {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    width: 200px;
-    height: 46px;
-    background-image: url('../images/score.png');
-    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 5px;
     display: flex;
-    justify-content: center;
     align-items: center;
     z-index: 5;
 }
 
-#score {
-    font-weight: 600;
-    font-size: 18px;
-    color: #2b2b2b;
+#homeColors, #awayColors {
+    display: inline-block;
+    width: 30px;
+    height: 25px;
+    border-radius: 0px;
 }
-
-#homeGoal, #awayGoal {
+   
+#homeColors {
+    background: linear-gradient(to right, #FDE100 50%, black 50%);
+}
+    
+#awayColors {
+    background: linear-gradient(to right, #004B9C 50%, white 50%);
+}
+    
+#score {
     color: #f5f5f5;
+    font-weight: 600;
+    margin: 0 10px;
 }
 
 #fullscreen {
@@ -192,7 +200,7 @@ body {
     transform: translate(-50%, -20%);
     font-variation-settings: "wght" 900, "ital" 1;
     font-size: 5rem;
-    text-align: center;e
+    text-align: center;
     font-family: "Meta", sans-serif;
     color: transparent;
     z-index: 6;
