--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -25,6 +25,11 @@ body {
     z-index: 5;
 }
 
+svg {
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+
 #scoreboard {
     position: fixed;
     top: 20px;
