--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -18,14 +18,18 @@ body {
 
 #ping {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20px;
     color: #ffffff;
     font-weight: 600;
     z-index: 5;
 }
 
 svg {
+    position: absolute;
+    top: 20px;
+    right: 20%;
     color: #ffffff;
     font-size: 1.5rem;
 }
