--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -18,9 +18,9 @@ body {
 
 #ping {
     position: absolute;
+    top: 60px;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 20px;
     color: #ffffff;
     font-weight: 600;
     z-index: 5;
@@ -32,6 +32,7 @@ i {
     right: 20px;
     color: #ffffff;
     font-size: 1.5rem;
+    z-index: 5;
 }
 
 #scoreboard {
