--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -22,7 +22,7 @@ body {
     transform: translateX(-50%);
     bottom: 20px;
     color: #ffffff;
-    font-weight: 600;
+    font-size: 8px;
     z-index: 5;
 }
 
