--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -22,7 +22,7 @@ body {
     transform: translateX(-50%);
     bottom: 20px;
     color: #ffffff;
-    font-size: 12px;
+    font-weight: 600;
     z-index: 5;
 }
 
@@ -31,7 +31,6 @@ i {
     top: 20px;
     right: 20px;
     color: #ffffff;
-    font-size: 1.5rem;
     z-index: 5;
 }
 
