--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -52,14 +52,6 @@ i {
     height: 25px;
     border-radius: 0px;
 }
-   
-#homeColors {
-    background: linear-gradient(to right, #FDE100 50%, black 50%);
-}
-    
-#awayColors {
-    background: linear-gradient(to right, #004B9C 50%, white 50%);
-}
     
 #score {
     color: #f5f5f5;
@@ -149,6 +141,7 @@ i {
     padding: 1px 3px;
     font-size: 8px;
     font-weight: 600;
+    white-space: nowrap;
     top: -20px; 
     left: 50%;
     transform: translateX(-50%);
