--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -138,12 +138,11 @@ i {
     
 .nickname {
     position: absolute;
-    padding: 1px 3px;
+    color: #ffffff;
     font-size: 8px;
-    font-weight: 600;
     white-space: nowrap;
-    top: -20px; 
     left: 50%;
+    bottom: -15px; 
     transform: translateX(-50%);
     z-index: 3;
 }
@@ -198,4 +197,33 @@ i {
     font-size: 16px;
     font-weight: 600;
     z-index: 6;
+}
+
+#loaderOverlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  width: 36px;
+  height: 36px;
+  border: 4px solid #fff;
+  border-top: 4px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
