--- a/public/css/arena.css
+++ b/public/css/arena.css
@@ -5,11 +5,10 @@
 }
 
 body {
-    /*
     -webkit-user-select: none;
     user-select: none;
     -webkit-touch-callout: none; 
-    touch-action: manipulation; */
+    touch-action: none;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 0;
 }
